# Nachtigall

./: .gitmodules  CMakeLists.txt  CreateProjectFiles.bat  CreateProjectFiles.sh  README.md  RefreshProjectFiles.sh
src/: CMakeLists.txt  n8igall.cpp  n8igall.h  n8igallcore.cpp  n8igallcore.h
src/utils/: DWD_CDC.cpp  DWD_CDC.h
test/: CMakeLists.txt  gas_consumption.cpp
test/data/: gas_consumption.csv
